<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_rounded"
    tools:context="uk.co.perspective.app.dialogs.EditAddressDialog"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/taskLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:minWidth="400dp"
        tools:context="uk.co.perspective.app.dialogs.NewTaskDialog">

        <Spinner
            android:id="@+id/address_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/quote_items_summary"
            android:autofillHints="Customer Type"
            android:textColorHint="#C6C6C6"
            android:textColorHighlight="#ECECEC"
            android:background="@drawable/spinner_background"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Notes"
            android:hint="Address"
            android:lines="5"
            android:gravity="start|top"
            android:inputType="textMultiLine|textCapWords|textPostalAddress"
            android:textColorHint="#C6C6C6"
            android:textColorHighlight="#ECECEC"
            android:background="@drawable/text_input_background"
            android:textCursorDrawable="@null"
            android:imeOptions="actionDone"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/actionholder"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/save"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_ok"
                android:layout_weight="1"
                android:theme="@style/FlatButtonStyle"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D5D5D5"
                />

            <Button
                android:id="@+id/delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_delete"
                android:layout_weight="1"
                android:theme="@style/FlatButtonStyle"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D5D5D5"
                />

            <Button
                android:id="@+id/cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel"
                android:layout_weight="1"
                android:theme="@style/FlatButtonStyle"
                android:textColor="@color/colorPrimary"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>