<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_rounded"
    tools:context="uk.co.perspective.app.dialogs.NewTaskDialog"
    android:padding="15dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/taskLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:minWidth="400dp"
        tools:context="uk.co.perspective.app.dialogs.NewTaskDialog">

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autofillHints="Subject"
            android:hint="Full Name"
            android:textColorHint="#C6C6C6"
            android:inputType="textCapWords"
            android:textColorHighlight="#ECECEC"
            android:background="@drawable/text_input_background"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <Spinner
            android:id="@+id/salutation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Salutation"
            android:textColorHint="#C6C6C6"
            android:textColorHighlight="#ECECEC"
            android:background="@drawable/spinner_background"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Subject"
            android:hint="Job Title"
            android:textColorHint="#C6C6C6"
            android:inputType="textCapSentences"
            android:textColorHighlight="#ECECEC"
            android:background="@drawable/text_input_background"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/telephone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:autofillHints="Subject"
                android:hint="Telephone Number"
                android:textColorHint="#C6C6C6"
                android:inputType="phone"
                android:textColorHighlight="#ECECEC"
                android:background="@drawable/text_input_background"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/callTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_phone"
                app:layout_constraintEnd_toEndOf="@+id/telephone_number"
                app:layout_constraintTop_toTopOf="@+id/telephone_number"
                app:tint="@color/colorAccent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:autofillHints="Subject"
                android:hint="Mobile Number"
                android:textColorHint="#C6C6C6"
                android:inputType="phone"
                android:textColorHighlight="#ECECEC"
                android:background="@drawable/text_input_background"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/callMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_phone"
                app:layout_constraintEnd_toEndOf="@+id/mobile_number"
                app:layout_constraintTop_toTopOf="@+id/mobile_number"
                app:tint="@color/colorAccent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Subject"
                android:background="@drawable/text_input_background"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHighlight="#ECECEC"
                android:textColorHint="#C6C6C6"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/sendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_email"
                app:layout_constraintEnd_toEndOf="@+id/email_address"
                app:layout_constraintTop_toTopOf="@+id/email_address"
                app:tint="@color/colorAccent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Notes"
            android:hint="Notes"
            android:lines="5"
            android:gravity="start|top"
            android:inputType="textMultiLine|textCapSentences"
            android:textColorHint="#C6C6C6"
            android:textColorHighlight="#ECECEC"
            android:background="@drawable/text_input_background"
            android:textCursorDrawable="@null"
            android:imeOptions="actionDone"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/makeDefault"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Make Default Contact" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/actionholder"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/save"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_save"
                android:layout_weight="1"
                android:theme="@style/FlatButtonStyle"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D5D5D5"
                />

            <Button
                android:id="@+id/delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_archive"
                android:layout_weight="1"
                android:theme="@style/FlatButtonStyle"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D5D5D5"
                />

            <Button
                android:id="@+id/cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel"
                android:layout_weight="1"
                android:theme="@style/FlatButtonStyle"
                android:textColor="@color/colorPrimary"/>


        </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>